--- a/MobileController.html
+++ b/MobileController.html
@@ -2,9 +2,12 @@
 <html>
 <head>
   <title>SkyFox Light Project</title>
+  <link rel="stylesheet" href="src/css/controls-style.css" />
 
+  <script src="./src/js/hammer.min.js"></script>
   <script src="./src/js/three.min.js"></script>
   <script src="./src/js/DeviceOrientationControls.js"></script>
+  <script src="./src/js/ComputerMobileControls.js"></script>
   <script src="./src/js/AxesHelper.js"></script>
   <script src="./src/js/constants.js"></script>
   <script src="./src/js/MessagesController.js"></script>
@@ -16,6 +19,7 @@
 <script>
   // create new LightPrograms class Object;
   let program = new MobileSlaveProgram();
+
 </script>
 
 </body>
