--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <script src="./src/js/three.min.js"></script>
   <script src="./src/js/stats.min.js"></script>
   <script src="./src/js/AxesHelper.js"></script>
+  <script src="./src/js/threex.laserbeam.js"></script>
+  <script src="./src/js/threex.lasercooked.js"></script>
   <script src="./src/js/constants.js"></script>
   <script src="./src/js/Light.js"></script>
   <script src="./src/js/MessagesController.js"></script>
@@ -16,7 +18,6 @@
 <script>
 // create new LightPrograms class Object;
 let program = new DesktopMasterProgram();
-
 </script>
 
 </body>
