--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF8" />
   <title>SkyFox Light Project</title>
+  <link rel="stylesheet" href="src/css/desktop-master-style.css" />
 
   <script src="./src/js/three.min.js"></script>
   <script src="./src/js/stats.min.js"></script>
@@ -10,11 +12,17 @@
   <script src="./src/js/threex.lasercooked.js"></script>
   <script src="./src/js/constants.js"></script>
   <script src="./src/js/Light.js"></script>
+  <script src="./src/js/CodeController.js"></script>
   <script src="./src/js/MessagesController.js"></script>
   <script src="./src/js/DesktopMasterProgram.js"></script>
 
 </head>
 <body>
+  <div id="code-show-block" class="code-show-block">
+    <label for="code-text">Ваш код:</label>
+    <div id="code-text" class="code-text"></div>
+  </div>
+
 <script>
 // create new LightPrograms class Object;
 let program = new DesktopMasterProgram();
